<resources>
    <string name="app_name">MyArsiteku</string>
    <string name="arsiteku">ARSITEKU</string>
    <string name="home_design">HOME DESIGN</string>
    <string name="tipe_rumah">TIPE RUMAH</string>
    <string name="activity_1">Activity 1</string>
    <string name="activity_2">Activity 2</string>
    <string name="activity_3">Activity 3</string>
    <string name="activity_4">Activity 4</string>
    <string name="activity_5">Activity 5</string>
    <string name="tipe_36">TIPE 36</string>
    <string name="tipe_45">TIPE 45</string>
    <string name="tipe_54">TIPE 54</string>
    <string name="tipe_60">TIPE 60</string>
    <string name="tipe_120">TIPE 120</string>
    <string name="tipe_70">TIPE 70</string>
    <string name="activity_6">Activity 6</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>